Reformat .gitignore and add vignettes
This change removes spaces within .gitignore and adds inst/doc to
ignore.

Additionally, I will add on vignettes, or short tutorials on how to use
my functions. In doing so, I must specify this in the DESCRIPTION file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,3 +5,6 @@ Description: R package to demonstrate concepts taught in the Nature Method
     importance of being uncertain, visualizing data, and experimental designs.
 Version: 0.0.1
 RoxygenNote: 5.0.1
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
