Add location_plot() function
- Add location_plot() to NAMESPACE
- Add code in population-dist.R
- Add documentation for location_plot()
- Add small update to population_dist() description

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(compare_reference)
 export(create_boxplots)
 export(inference)
+export(location_plot)
 export(population_dist)
 export(ppv)
 export(vary_box_size)
