--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,5 @@
 Package: poofsi
+Type: Package
 Title: Learn concepts from Nature's "Points of Significance"
 Description: R package to demonstrate concepts taught in the Nature Method
     series "Points of Significance". Covers topics such as (but not limited to)
@@ -6,7 +7,12 @@ Description: R package to demonstrate concepts taught in the Nature Method
 Version: 0.0.1
 Authors@R: person("Eric", "Leung", email = "eric@erictleung.com", role =
   c("aut", "cre"))
+URL: https://github.com/erictleung/poofsi
+BugReports: https://github.com/erictleung/poofsi/issues
+Depends:
+    R (>= 3.3.0)
 RoxygenNote: 5.0.1
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
+License: MIT
