--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,9 @@ URL: https://github.com/erictleung/poofsi
 BugReports: https://github.com/erictleung/poofsi/issues
 Depends:
     R (>= 3.3.0)
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
 License: MIT + file LICENSE
